syntax = "proto3";

option csharp_namespace = "GrpcServer";

package greet;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc GetProductDetails (ProductRequest) returns (ProductResponse);
}

// The request message containing the user's name.
message ProductRequest {
  string name = 1;
}

message ProductResponse {
  string product_name = 1;
  double price = 2;
}
